--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-svg": "14.1.0",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
