--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.73.6",
     "react-native-mask-input": "^1.2.3",
     "react-native-svg": "14.1.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
