--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-mask-input": "^1.2.3",
+    "react-native-outside-press": "^1.2.2",
+    "react-native-reanimated": "~3.6.2",
     "react-native-svg": "14.1.0",
-    "react-redux": "^9.1.1",
-    "react-native-reanimated": "~3.6.2"
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
