--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-mask-input": "^1.2.3",
     "react-native-outside-press": "^1.2.2",
     "react-native-reanimated": "~3.6.2",
+    "react-native-skeleton-component": "^1.0.0",
     "react-native-svg": "14.1.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "@react-native-masked-view/masked-view": "0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
