--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-skeleton-component": "^1.0.0",
     "react-native-svg": "14.1.0",
     "react-redux": "^9.1.1",
-    "@react-native-masked-view/masked-view": "0.3.0"
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-community/netinfo": "11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
