--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -22,11 +24,11 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-outside-press": "^1.2.2",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-skeleton-component": "^1.0.0",
     "react-native-svg": "14.1.0",
     "react-redux": "^9.1.1",
-    "@react-native-masked-view/masked-view": "0.3.0",
-    "@react-native-community/netinfo": "11.1.0"
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
