--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "11.1.0",
-    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-secure-store": "~12.8.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.14",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-mask-input": "^1.2.3",
     "react-native-outside-press": "^1.2.2",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-skeleton-component": "^1.0.0",
-    "react-native-svg": "14.1.0",
-    "react-redux": "^9.1.1",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-svg": "15.2.0",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
